# python-project-52

./: .gitignore  Makefile  README.md  build.sh  db.sqlite3  main.py  pyproject.toml  ruff.toml
task_manager/: settings.py  urls.py
task_manager/homepage/: apps.py  urls.py  views.py
task_manager/homepage/templates/: layout.html
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/fixtures/: statuses.json
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_name.py
task_manager/templates/: layout.html
task_manager/templates/statuses/: status_create.html  status_delete.html  status_update.html  statuses_show.html
task_manager/templates/tasks/: tasks_show.html
task_manager/templates/users/: create.html  create2.html  delete.html  login.html  show.html  update.html  user_create.html  user_delete.html  user_update.html  users_show.html
task_manager/users/: forms.py  models.py  models2.py  models3.py  tests.py  urls.py  views.py  views2.py
task_manager/users/fixtures/: users.json
task_manager/users/migrations/: 0001_initial.py  0002_alter_user_nickname.py  0003_user_password1_user_password2_alter_user_first_name_and_more.py  0004_alter_user_password1_alter_user_password2.py  0005_rename_nickname_user_username.py  0006_alter_user_password1_alter_user_password2.py  0007_alter_user_password1_alter_user_password2.py  0008_alter_user_options_alter_user_managers_and_more.py  0009_remove_user_password1_remove_user_password2.py  0010_alter_user_first_name_alter_user_last_name_and_more.py  (+1 more)
(+2 files in other folders)
